<resources>
    <string name="app_name">teste</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="words">Words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wordList">Words List</string>
    <string name="btnBack">Voltar</string>
    <string name="btnNext">Próximo</string>
    <string name="meanings">Meanings</string>
    <string name="try_again">Tente outra vez</string>
    <string name="error_loading_words">Desculpe, não encontramos definições para a palavra que você está procurando</string>
    <string name="return_audio_empty">Ainda não possuímos o audio desta palavra!</string>
    <string name="word_save">Palavra salva como favorito!</string>
    <string name="word_remove">Palavra removida do favorito!</string>
    <string name="fragment_word">fragment_word</string>
    <string name="fragment_favorite">fragment_favorite</string>
    <string name="fragment_history">fragment_history</string>
    <string name="fragment_details">fragment_details</string>
    <string name="fragment_error">fragment_error</string>
</resources>